testsuite/poke.pkl/scons-diag-6.pk
/* { dg-do compile } */

type Struct = struct {int a; int b;};

var s = Struct
           {
             a = 10, /* { dg-error "duplicated" } */
             b = 20,
             a = 30
           };
